--- a/sink/Dockerfile
+++ b/sink/Dockerfile
@@ -1,8 +1,8 @@
-FROM python:2.7
+FROM python:2.7-onbuild
 
-COPY ./run.py  opt/rspsink/run.py
-COPY ./RSPCollector.py  opt/rspsink/RSPCollector.py
-WORKDIR opt/rspsink
+#WORKDIR /usr/src/app/
+#COPY ./run.py  ./run.py
+#COPY ./RSPCollector.py  ./RSPCollector.py
 
 ENTRYPOINT [ "python", "./run.py"]
 
